--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-jdbc-driver</artifactId>
-            <version>3.4.0</version>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>4.3.4</version>
         </dependency>
 
         <dependency>
